// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LockIcon/> custom properties 1`] = `
<span
  className="domain-field-lock-icon jest-testing-cls"
  onBlur={[Function]}
  onClick={null}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="fa fa-unlock"
  />
</span>
`;

exports[`<LockIcon/> default properties 1`] = `
<span
  className="domain-field-lock-icon"
  onBlur={[Function]}
  onClick={null}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="fa fa-lock"
  />
</span>
`;
